# sentinel

./: .gitignore  Cargo.toml  PLAN.md  TODO.md  build-and-run.sh  build.sh  flake.nix  shell.nix
src/: bot.rs  error.rs  main.rs  meta.rs  talk_like.rs  talklike.rs  tts.rs
src/modules/: dj.rs  mod.rs  talklike.rs
