[package]
name = "sentinel"
version = "0.2.0"
authors = ["Andrew Abbott <mirrexagon@mirrexagon.com>"]
edition = "2018"

[dependencies]
env_logger = "0.6"
kankyo = "0.2"
log = "0.4"
serde = "1.0"
serde_json = "1.0"

[dependencies.lmarkov]
git = "https://github.com/mirrexagon/lmarkov.git"
features = ["serialization"]

[dependencies.serenity]
version = "0.7"
features = ["cache", "framework", "standard_framework", "rustls_backend"]
