[package]
name = "sentinel"
version = "0.1.0"
authors = ["Andrew Abbott <mirrexagon@mirrexagon.com>"]
edition = "2018"

[dependencies]
env_logger = "0.8.3"
log = "0.4.14"
serde = "1.0.125"
serde_json = "1.0.64"
serenity = "0.10.5"

[dependencies.lmarkov]
git = "https://github.com/mirrexagon/lmarkov.git"
features = ["serialization"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]
