[package]
name = "sentinel"
version = "0.1.0"
authors = ["Andrew Abbott <mirrexagon@mirrexagon.com>"]
edition = "2021"

[dependencies]
env_logger = "0.10.1"
log = "0.4.20"
serde = "1.0.193"
serde_json = "1.0.108"
serenity = "0.12.0"

[dependencies.lmarkov]
version = "0.1.0"
features = ["serialization"]

[dependencies.tokio]
version = "1.35"
features = ["macros", "rt-multi-thread"]
